"fix(build): enable tokio signal, correct zeroconf API, and clean up props
- Add tokio `signal` feature to use tokio::signal::ctrl_c()
- Use zeroconf prelude traits; fix ServiceType::new(\"_audiobridge\",\"_udp\")
- Simplify mDNS advertiser; drop unused discovery stub for now
- Remove unused clap::Subcommand import
- GStreamer: don't use `?` on set_property; try device and device-name
"

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "ab-core"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 anyhow = "1"
 thiserror = "1"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
 gstreamer = "0.23"
 gstreamer-audio = "0.23"
 gstreamer-rtp = "0.23"
